--- a/Dentan/Dentan.csproj
+++ b/Dentan/Dentan.csproj
@@ -66,6 +66,18 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="OxyPlot, Version=2014.1.546.0, Culture=neutral, PublicKeyToken=638079a8f0bd61e9, processorArchitecture=MSIL">
+      <HintPath>..\packages\OxyPlot.Core.2014.1.546\lib\portable-net4+sl4+wp71+win8\OxyPlot.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="OxyPlot.Wpf, Version=2014.1.546.0, Culture=neutral, PublicKeyToken=75e952ba404cdbb0, processorArchitecture=MSIL">
+      <HintPath>..\packages\OxyPlot.Wpf.2014.1.546\lib\net45\OxyPlot.Wpf.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="OxyPlot.Xps, Version=2014.1.546.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\OxyPlot.Wpf.2014.1.546\lib\net45\OxyPlot.Xps.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Reactive.Core">
@@ -155,6 +167,9 @@
     <Compile Include="ViewModel\Preferences\NetworkPreferenceViewModel.cs" />
     <Compile Include="ViewModel\Preferences\PreferenceGroupViewModel.cs" />
     <Compile Include="ViewModel\Preferences\PreferenceViewModel.cs" />
+    <Compile Include="ViewModel\Record\MaterialPlotViewModel.cs" />
+    <Compile Include="ViewModel\Record\PlotViewModelBase.cs" />
+    <Compile Include="ViewModel\Record\ResourcePlotViewModel.cs" />
     <Compile Include="ViewModel\SessionsViewModel.cs" />
     <Compile Include="View\BrowserHost.cs" />
     <Compile Include="View\BytesToStringConverter.cs" />
@@ -197,6 +212,9 @@
     </Compile>
     <Compile Include="View\Preference\PreferenceWindow.xaml.cs">
       <DependentUpon>PreferenceWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Record\ResourceChartWindow.xaml.cs">
+      <DependentUpon>ResourceChartWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\SessionsView.xaml.cs">
       <DependentUpon>SessionsView.xaml</DependentUpon>
@@ -340,6 +358,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\Preference\PreferenceWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Record\ResourceChartWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
