--- a/Dentan/packages.config
+++ b/Dentan/packages.config
@@ -3,6 +3,8 @@
   <package id="AvalonDock" version="2.0.2000" targetFramework="net45" />
   <package id="FiddlerCore" version="4.5.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="OxyPlot.Core" version="2014.1.546" targetFramework="net45" />
+  <package id="OxyPlot.Wpf" version="2014.1.546" targetFramework="net45" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
