+ Expedition History Window

--- a/Dentan/Dentan.csproj
+++ b/Dentan/Dentan.csproj
@@ -164,6 +164,7 @@
     <Compile Include="ViewModel\Preferences\NetworkPreferenceViewModel.cs" />
     <Compile Include="ViewModel\Preferences\PreferenceGroupViewModel.cs" />
     <Compile Include="ViewModel\Preferences\PreferenceViewModel.cs" />
+    <Compile Include="ViewModel\Record\ExpeditionHistoryViewModel.cs" />
     <Compile Include="ViewModel\Record\MaterialPlotViewModel.cs" />
     <Compile Include="ViewModel\Record\PlotViewModelBase.cs" />
     <Compile Include="ViewModel\Record\ResourcePlotViewModel.cs" />
@@ -208,6 +209,9 @@
     </Compile>
     <Compile Include="View\Preference\PreferenceWindow.xaml.cs">
       <DependentUpon>PreferenceWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Record\ExpeditionHistoryWindow.xaml.cs">
+      <DependentUpon>ExpeditionHistoryWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Record\ResourceChartWindow.xaml.cs">
       <DependentUpon>ResourceChartWindow.xaml</DependentUpon>
@@ -362,6 +366,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\Preference\PreferenceWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Record\ExpeditionHistoryWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
