+ Basic screenshot feature

--- a/Dentan/Dentan.csproj
+++ b/Dentan/Dentan.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Model\Preference.cs" />
     <Compile Include="Model\Preference.Data.cs" />
     <Compile Include="Model\UpdateChannel.cs" />
+    <Compile Include="Utils\ScreenCapturer.cs" />
     <Compile Include="ViewModel\Browser\BrowserViewModel.cs" />
     <Compile Include="ViewModel\Browser\VolumeViewModel.cs" />
     <Compile Include="ViewModel\GameViewModel.cs" />
