--- a/Dentan.BrowserBridge/Dentan.BrowserBridge.csproj
+++ b/Dentan.BrowserBridge/Dentan.BrowserBridge.csproj
@@ -64,6 +64,7 @@
     <Compile Include="IBrowserProvider.cs" />
     <Compile Include="MemoryMappedFileCommunicator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScreenshotData.cs" />
     <Compile Include="ScreenshotImageFormat.cs" />
   </ItemGroup>
   <ItemGroup>
