+ Multi layout engine support

--- a/Dentan.Browser.Trident/Dentan.Browser.Trident.csproj
+++ b/Dentan.Browser.Trident/Dentan.Browser.Trident.csproj
@@ -72,6 +72,9 @@
       <Name>Moen.SystemInterop</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Dentan.Browser.Trident.json" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy $(TargetPath) $(SolutionDir)bin\Debug\Browsers\</PostBuildEvent>
