--- a/Dentan.BrowserBridge/Dentan.BrowserBridge.csproj
+++ b/Dentan.BrowserBridge/Dentan.BrowserBridge.csproj
@@ -62,6 +62,7 @@
     <Compile Include="FlashRenderMode.cs" />
     <Compile Include="IBrowser.cs" />
     <Compile Include="IBrowserProvider.cs" />
+    <Compile Include="LayoutEngine.cs" />
     <Compile Include="MemoryMappedFileCommunicator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenshotImageFormat.cs" />
